--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.fragment:fragment:1.3.0"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
     // Kotlin
